# hashbrowns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conanfile.py  debug_test.cpp  final_vision.md  requirements.txt
.github/workflows/: ci.yml  docs.yml
cmake/: hashbrownsConfig.cmake.in
docs/: Doxyfile.in  README.md  performance_analysis.md
docs/api/: baseline_policy.json  consuming_library.md  mainpage.md  memory_probes_dox.md  perf_guard_contract.json  profiles.json  quickstart_dox.md  schema.md
docs/api/schemas/: baseline_policy.schema.json  baseline_report.schema.json  benchmark_results.schema.json  crossover_results.schema.json  perf_guard_contract.schema.json  profiles.schema.json  series_results.schema.json
docs/baselines/: README.md
docs/media/: README.md
docs/samples/: benchmark_single.json
docs/tutorials/: adding_a_structure.md  memory_and_probes.md  quickstart.md  running_benchmarks.md
perf_baselines/: baseline.json
scripts/: analyze_results.ps1  analyze_results.py  build.ps1  build.sh  build_report.py  ci_local.sh  example_parse.py  generate_docs.sh  perf_guard.ps1  perf_guard.sh  perf_guard_report.py  plot_results.py  run_benchmarks.ps1  run_benchmarks.sh  test_baseline_policy_contract.py  test_build_report.py  test_perf_guard_contract.py  test_perf_guard_report.py  test_perf_guard_wrapper_manifest.py  test_profile_contract.py  test_validate_json.py  update_baseline.sh  validate_json.py
src/: main.cpp
src/benchmark/: benchmark_baseline.cpp  benchmark_io.cpp  benchmark_suite.cpp  benchmark_suite.h  regression_tester.cpp  regression_tester.h  stats_analyzer.h
src/cli/: cli_args.cpp  cli_args.h  cli_handlers.cpp  cli_handlers.h
src/core/: data_structure.h  memory_manager.cpp  memory_manager.h  timer.cpp  timer.h
src/structures/: dynamic_array.cpp  dynamic_array.h  hash_map.cpp  hash_map.h  linked_list.cpp  linked_list.h
tests/unit/: main_tests.cpp  test_benchmark_crossover.cpp  test_dynamic_array.cpp  test_framework.h  test_hash_map.cpp  test_json_output.cpp  test_linked_list.cpp  test_memory_tracker.cpp  test_series_json.cpp  test_stats.cpp  test_timer.cpp
tools/: regression_check.cpp
